--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,14 +6,18 @@
 image:
     # Slow to start: on demand :-|
 #   - Visual Studio 2013
-# 
-  - Visual Studio 2015
+#   - Visual Studio 2015
+    # Fast to start: pre-heated :->
+#   - Visual Studio 2015 Preview
 # 
   - Visual Studio 2017
     # Slow to start: on demand :-|
+#   - Visual Studio 2017 Preview
+    # Slow to start: on demand :-|
 #   - Visual Studio 2019
     # Slow to start: on demand :-|
-#   - Visual Studio 2019 Preview
+# 
+  - Visual Studio 2019 Preview
 
 environment:
   APPVEYOR_RDP_PASSWORD:
@@ -76,8 +80,10 @@ for:
 -
   matrix:
     only:
+        # (12.0.40629.0).
       - image: Visual Studio 2013
 
+# When without 'string' commit.
   build:
     project: btrfs_noCpp17.sln
     verbosity: quiet
@@ -100,8 +106,12 @@ for:
 -
   matrix:
     only:
+        # (14.0.25420.1).
       - image: Visual Studio 2015
+        # "obsolete" :-| (14.0.25420.1).
+      - image: Visual Studio 2015 Preview
 
+# When without 'string' commit.
   build:
     project: btrfs_noCpp17.sln
     verbosity: quiet
@@ -136,7 +146,10 @@ for:
 -
   matrix:
     only:
+        # (15.9.21.664).
       - image: Visual Studio 2017
+        # "obsolete" :-< (15.9.19.36755, + 'Windows SDK version 10.0.18362.0 was not found').
+      - image: Visual Studio 2017 Preview
 
 ##   environment:
 ##     additional_flags: /permissive-
@@ -177,17 +190,24 @@ for:
 -
   matrix:
     only:
+        # (16.3.0.46305).
       - image: Visual Studio 2019
 
 ##   environment:
 ##     additional_flags: /permissive-
+
+# v140, When without 'string' commit.
+#   build:
+#     project: btrfs_noCpp17.sln
+#     verbosity: quiet
 
   before_build:
 ##     - set CFLAGS=%additional_flags%
 ##     - set CXXFLAGS=%additional_flags%
 # TestOnly:     - for %%p in (*.vcxproj) do  sed -i "s|<PlatformToolset>v14.<|<PlatformToolset>v140<|g" %%p
       # 'error MSB8036: The Windows SDK version NNN was not found.':
-      #   (10.0.18362.1,) 10.0, 10, 8.1, 8.0, 8.
+      #   (10.0.18362.1,) 10.0, 10, 8.0, 8.
+ # 8.1 found, but error: usual... (too old!!?)
  # 10.0.18362.0, 10.0.17763.0 found, but error: shellbtrfs, no string_view support.
 # CfCommit: v140:     - sed -i "s|<WindowsTargetPlatformVersion>8\.1<|<WindowsTargetPlatformVersion>10.0.18362.0<|g" mkbtrfs.vcxproj
 # v140:     - for %%p in (*.vcxproj) do  sed -i "s|<WindowsTargetPlatformVersion>10\.0<|<WindowsTargetPlatformVersion>10.0.18362.0<|g" %%p
@@ -196,13 +216,15 @@ for:
  # 'error MSB8020: The build tools for Visual Studio 2017 (Platform Toolset = 'v141') cannot be found.'
 # TestOnly:     - for %%p in (*.vcxproj) do  sed -i "s|<PlatformToolset>v14.<|<PlatformToolset>v141<|g" %%p
       # 'error MSB8036: The Windows SDK version NNN was not found.':
-      #   (10.0.18362.1,) 8.1, 8.0, 8.
-      # 10.0.18362.0, 10.0.17763.0, 10.0, 10 found :-|
+      #   (10.0.18362.1,) 10.0, 10, 8.0, 8.
+ # 8.1 found, but error: usual... (too old!!?)
+      # 10.0.18362.0, 10.0.17763.0 found :-|
 # CfCommit: v141:     - sed -i "s|<WindowsTargetPlatformVersion>8\.1<|<WindowsTargetPlatformVersion>10.0<|g" mkbtrfs.vcxproj
-## v141:     - for %%p in (*.vcxproj) do  sed -i "s|<WindowsTargetPlatformVersion>10\.0<|<WindowsTargetPlatformVersion>10<|g" %%p
+# v141:     - for %%p in (*.vcxproj) do  sed -i "s|<WindowsTargetPlatformVersion>10\.0<|<WindowsTargetPlatformVersion>10.0.18362.0<|g" %%p
 #
       # 'error MSB8036: The Windows SDK version NNN was not found.':
-      #   (10.0.18362.1,) 8.1, 8.0, 8.
+      #   (10.0.18362.1,) 8.0, 8.
+ # 8.1 found, but error: usual... (too old!!?)
       # 10.0.18362.0, 10.0.17763.0, 10.0, 10 found: success :-)
 # CfCommit: v142:     - sed -i "s|<WindowsTargetPlatformVersion>8\.1<|<WindowsTargetPlatformVersion>10.0<|g" mkbtrfs.vcxproj
       # And this one too. Optional, but be consistent.
@@ -225,7 +247,7 @@ for:
 -
   matrix:
     only:
-# VS2019P: "obsolete" :-<
+        # "obsolete" :-< (16.3.0.45602).
       - image: Visual Studio 2019 Preview
 
   before_build:
@@ -234,14 +256,12 @@ for:
 ## TestOnly:     - for %%p in (*.vcxproj) do  sed -i "s|<PlatformToolset>v14.<|<PlatformToolset>v141<|g" %%p
 #
       # 'error MSB8036: The Windows SDK version NNN was not found.':
-      #   (10.0.18362.1,) 10.0.18362.0, 10.0, 10, 8.0, 8.
- # 8.1 found, but 2 errors...
+      #   (10.0.18362.1,) 10.0, 10, 8.0, 8.
+ # 10.0.18362.0, 10.0.17763.0, 8.1 found, but 3 errors:
  #  btrfs: 'error MSB4062: The "ValidateNTTargetVersion" task could not be loaded from the assembly C:\Program Files (x86)\Windows Kits\10\build\bin\Microsoft.DriverKit.Build.Tasks.16.0.dll.'
+ #  shellbtrfs: 'fatal error C1083: Cannot open include file: 'mountmgr.h': No such file or directory'
  #  ubtrfs: 'fatal error C1083: Cannot open include file: 'ata.h': No such file or directory'
- # 10.0.17763.0 found, but error: btrfs: 'error MSB4062: The "ValidateNTTargetVersion" task could not be loaded from the assembly C:\Program Files (x86)\Windows Kits\10\build\bin\Microsoft.DriverKit.Build.Tasks.16.0.dll.'
-    - for %%p in (*.vcxproj) do  sed -i "s|<WindowsTargetPlatformVersion>10\.0\.18362\.0<|<WindowsTargetPlatformVersion>10.0.17763.0<|g" %%p
-#       # And this one too?!
-#     - for %%p in (*.vcxproj) do  sed -i "s|<WindowsTargetPlatformVersion>10\.0<|<WindowsTargetPlatformVersion>8.1<|g" %%p
+##    - for %%p in (*.vcxproj) do  sed -i "s|<WindowsTargetPlatformVersion>10\.0<|<WindowsTargetPlatformVersion>10.0.18362.0<|g" %%p
 #
 # v7.0A, v7.1A, v8.0, v8.0A, v8.1, v8.1A, v10.0A
 #     - dir "C:\Program Files (x86)\Microsoft SDKs\Windows\"
@@ -249,3 +269,6 @@ for:
 #     - dir "C:\Program Files (x86)\Microsoft SDKs\Windows Kits\"
 # 8.0, 8.1 and 10.
 #     - dir "C:\Program Files (x86)\Windows Kits\"
+#
+# TestOnly: to check outdated msbuild (component). It works :-)
+#     - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
